--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#303A7F">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="description" content="RTCC - RT International Convention Companion 2026">
@@ -370,6 +371,57 @@
     </div>
 
     <!-- ================================================
+         MODAL: Room Chat
+         ================================================ -->
+    <div id="modalChat" class="modal-backdrop hidden" onclick="closeModalOnBackdrop(event, 'modalChat')">
+      <div class="modal-card modal-card--tall modal-card--chat" role="dialog" aria-modal="true" aria-label="Chat de sala">
+        <button class="modal-close" onclick="closeChat()">&times;</button>
+
+        <div class="chat-header">
+          <div class="chat-header-icon">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+            </svg>
+          </div>
+          <div>
+            <h2 class="chat-room-name" id="chatRoomName">Chat</h2>
+            <span class="chat-room-sub">Chat en tiempo real</span>
+          </div>
+        </div>
+
+        <div class="chat-messages" id="chatMessages">
+          <div class="chat-loading">Cargando mensajes...</div>
+        </div>
+
+        <div class="chat-auth-wall hidden" id="chatAuthWall">
+          <p>Inici&aacute; sesi&oacute;n para enviar mensajes</p>
+          <button class="btn-primary" style="margin-top: 8px;" onclick="closeChat(); openAuthModal()">Acceder</button>
+        </div>
+
+        <div class="chat-compose hidden" id="chatCompose">
+          <div class="chat-mention-dropdown hidden" id="chatMentionDropdown"></div>
+          <div class="chat-compose-row">
+            <textarea
+              class="chat-input"
+              id="chatInput"
+              placeholder="Escrib&iacute; un mensaje..."
+              rows="1"
+              maxlength="500"
+              oninput="onChatInput(this)"
+              onkeydown="onChatKeydown(event)"
+            ></textarea>
+            <button class="chat-send-btn" onclick="sendChatMessage()" id="chatSendBtn">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/>
+              </svg>
+            </button>
+          </div>
+          <div class="chat-char-count" id="chatCharCount">500</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ================================================
          MODAL: Photo Crop
          ================================================ -->
     <div id="modalCrop" class="modal-backdrop modal-backdrop--dark hidden">
@@ -423,5 +475,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/chat.js"></script>
 </body>
 </html>
