--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,6 +17,9 @@
 </head>
 <body>
 
+  <!-- Pull to refresh indicator -->
+  <div id="pullToRefreshIndicator" class="pull-to-refresh hidden">↻ Soltá para actualizar</div>
+
   <!-- Splash / Loading -->
   <div id="splash" class="splash">
     <img src="img/logo-convention-gold.png" alt="RT Convention 2026" class="splash-logo">
