--- a/webapp/index.html
+++ b/webapp/index.html
@@ -115,6 +115,14 @@
             <p class="muted">Cargando...</p>
           </div>
         </div>
+
+        <!-- My sessions -->
+        <div class="section-card" id="mySessions">
+          <h3 class="section-card-title">Mis sesiones</h3>
+          <div id="mySessionsContent">
+            <p class="muted">Cargando...</p>
+          </div>
+        </div>
       </section>
 
       <!-- AGENDA -->
